package com.kailash.tutorial.swing.ch30.model;

public enum AgeCategory {
    child, adult, senior
}
