package com.kailash.tutorial.swing.ch30.model;

public enum EmploymentCategory {
    employed, selfEmployed, unemployed, other
}
