package com.kailash.tutorial.swing.ch30.model;

public enum Gender {
    male, female
}
